# semantic-kernel-sample-app

./: README.md  code_interpreter.py  github.py  github_agent.py  lights_plugin.py  main.py  pyproject.toml
multi_agent_a2a/: .env.example  README.md  client.py  github_agent_executor.py  github_server.py  launcher.py  lights_agent_executor.py  lights_server.py
